--- a/style.css
+++ b/style.css
@@ -13,20 +13,19 @@ img{
 body > div {
     flex: 1;
     display: flex;
-    flex-direction: column;
+    flex-direction: 400column;
     justify-content: center;
     align-items: center;
-    padding: 10px 10%;
-    
+    padding: 60px 100px;
 }
 .header,
 .footer{
-    flex-direction: row;
     flex: 0 0 20px;
 }
 .header{
     background-color: #ef8354;
     justify-content: space-between;
+    padding: 16px 100px;
 }
 .hero{
     background-color: #4f5d75;
@@ -34,19 +33,27 @@ body > div {
     justify-content: space-between;
 }
 .information{
-    background-color: #fff;
+    background-color: #fff; 
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .inspiration{
     background-color: #bfc0c0;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-end;
 }
 .signUp{
-    background-color: #4f5d75;
-    justify-content: flex-end;
-    padding: 24px;
+    background-color: #4f5d75;    
 }
 .footer{
     background-color: #2d3142;
     padding: 24px;
+}
+.signature{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 2em;
 }
 ul{
     display: flex;
@@ -67,34 +74,39 @@ h2{
 .big-img{
     width: 600px;
 }
-button{
+.button{
     background-color:#bfc0c0 ;
     padding: 8px 16px;
     border-radius: 8px;
     font-weight: 600;
     font-family: sans-serif;
 }
-.services{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 100px;
-}
-.services div{
+#sign-box{
+    background-color: #ef8354;
+    padding: 80px;
+    margin: 60px;lex-direction: column;
+    border-radius: 32px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
+    align-items: flex-end;
+    font-size: 1.5rem;
+}
+.services{
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-    padding: 30px;
+    gap: 20px;
+}
+.serve{
+    flex: 1;
+    text-align: center;
 }
 .ser-img{
-    width: 250px;
-    height: 200px;
+    width: 300px;
+    height: 240px;
     border: #4f5d75 solid 1px;
     border-radius: 10%;
-}
-.signet{
-
 }
 
 
